# sprint-planning-copilot

./: .dockerignore  .env  .env.sample  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  bugs  bugs.md  docker-compose.yml  pyproject.toml  requirements.txt
.devbin/: python
backend/: app.py  audit.py  config.py  container.py  extractor.py  logger.py  mlflow_logging.py  requirements.txt  schemas.py  settings.py  storage.py  stt.py  worker.py
backend/api/: dependencies.py  router.py  ui_router.py
backend/application/: ports.py  workflow.py
backend/application/commands/: meeting_import.py
backend/application/services/: voice_profiles.py
backend/application/use_cases/: extract_meeting.py
backend/db/: schemas.py  storage.py
backend/domain/: ports.py
backend/infrastructure/audio/: normalizer.py
backend/infrastructure/llm/: task_extractor.py
backend/scripts/: elevenlabs_mp3_generator.py
backend/services/: __init__.py  blob_storage.py
backend/tests/: test_azure_queue.py  test_blob_storage_security.py  test_container_queue_config.py  test_extract_meeting_use_case.py  test_meeting_import_command.py  test_mlflow_logging.py  test_security_azure_ad.py  test_voice_profiles.py
data/mlflow/: mlflow.db
frontend/: .dockerignore  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: index.css  main.tsx  vite-env.d.ts
frontend/tests/: smoke.spec.ts
samples/: sample_result.json  sample_transcript.txt
(+40 files in other folders)
